# aBAJA2025

./: README.md
ros2_ws/src/camera_sensor/: package.xml  setup.py
ros2_ws/src/camera_sensor/camera_sensor/: CameraFramePublisher.py
ros2_ws/src/lane_detection/: package.xml  setup.py
ros2_ws/src/lane_detection/lane_detection/: lane.py  lane_detector.py  lane_new.py  lane_new2.py  lane_new5.py  lane_new6.py  lane_node.py  lane_node2.py  steering_controller.py
ros2_ws/src/object_detection/object_detection/: object_detector_node.py
