<?xml version="1.0"?>
<package format="3">
  <name>camera_sensor</name>
  <version>0.0.0</version>
  <description>ROS 2 package to publish images from CarMaker RSDS TCP stream using sensor_msgs/Image</description>
  <maintainer email="rohit@todo.todo">rohit</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
